add POST request to database

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,6 +15,18 @@
    </header>
 
    <main>
+      <div>
+         <form>
+            <input id="in-title" placeholder="title" type="text">
+            <input id="in-publisher" placeholder="publisher" type="text">
+            <input id="in-releaseYear" placeholder="release year" type="text">
+            <input id="in-rating" placeholder="rating out of 10" type="number">
+            <button id="btn-add-game">Submit</button>
+         </form>
+      </div>
+
+      <br>
+
       <table>
          <thead>
             <tr>
@@ -28,7 +40,6 @@
          <tbody id="gameTable">
             <!-- reserved for jQuery -->
          </tbody>
-
       </table>
    </main>
 </body>
